# byteskill

./: Cargo.toml  README.md  questions.json
src/: evaluation.rs  main.rs  question_bank.rs
src/routes/: get_question.rs  mark_question.rs  mod.rs
templates/: base.html
templates/questions/: list_questions.html  marked.html  question.html
