[package]
name = "byteskill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
dunce = "1.0.3"
futures-util = "0.3.28"
tempfile = "3.5.0"
tokio = { version = "1.27.0", features = ["full"] }
