[package]
name = "byteskill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
bollard = "0.14.0"
dunce = "1.0.3"
futures-util = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.159"
serde_json = "1.0.95"
tempfile = "3.5.0"
tera = "1.18.1"
tokio = { version = "1.27.0", features = ["full"] }
